--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
 
 body{
     background-image: url(./education-wallpaper-school-university-connected-seamless-pattern-tiling-textures-thin-line-integrated-web-icons-set-68739232.jpg);
@@ -13,12 +14,49 @@ h1{
 text-shadow: 2px 2px #000;
 }
 
-#paragraph{
+button{
+    color:rgb(107, 110, 133);
+    background-color:rgb(79, 226, 74);
+    font-family: 'Chakra Petch', sans-serif;
+    font-size:25px ;
+    font-weight:bold;
+    border-color:rgb(107, 110, 133);;
+    border-radius:10%;
+    border-width:medium;
+}
+
+.Answers{
+    /* margin-top:3px; */
+    color:rgb(63, 122, 61);
+    font-style: italic;
+
+}   
+
+.paragraphtop{
+    background-color: rgba(115, 189, 41, 0.836);    
+    width: 800px;
+    height: 150px;
+    display:center; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+}
+
+.paragraphcss {
 background-color: rgba(128, 255, 0, 0.658);
-font-size:20px ;
-font-family: sans-serif;
+font-size:23px ;
+font-family: 'Roboto Mono', monospace;
 font-weight: bold;
 color:rgb(107, 110, 133);
-text-decoration: bold;
 text-shadow: 1px 1px #000;
+width: 800px;
+height: 300px;
+display:center;
+justify-content: center;
+align-items: center;
+text-align: center;
+margin: auto;
 }
+
+
