--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 h1{
-    font-size:40px ;
+    font-size:6gi0px ;
     font-family: 'Chakra Petch', sans-serif;
     font-weight: bold;
     color:rgb(63, 122, 61);
